Source/WebCore/page/Settings.cpp
@@ -145,7 +145,8 @@ static const bool defaultShouldRespectImageOrientation = true;
 static const bool defaultImageSubsamplingEnabled = true;
 static const bool defaultScrollingTreeIncludesFrames = true;
 static const bool defaultMediaControlsScaleWithPageZoom = true;
-static const bool defaultPluginReplacementEnabled = true;
+static const bool defaultQuickTimePluginReplacementEnabled = true;
+static const bool defaultYouTubeFlashPluginReplacementEnabled = true;
 #else
 static const bool defaultFixedPositionCreatesStackingContext = false;
 static const bool defaultFixedBackgroundsPaintRelativeToDocument = false;
@@ -159,7 +160,8 @@ static const bool defaultShouldRespectImageOrientation = false;
 static const bool defaultImageSubsamplingEnabled = false;
 static const bool defaultScrollingTreeIncludesFrames = false;
 static const bool defaultMediaControlsScaleWithPageZoom = true;
-static const bool defaultPluginReplacementEnabled = false;
+static const bool defaultQuickTimePluginReplacementEnabled = false;
+static const bool defaultYouTubeFlashPluginReplacementEnabled = false;
 #endif
 
 static const bool defaultAllowsPictureInPictureMediaPlayback = true;
